JumpScript/tests/baselines/reference/parserDoStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserDoStatement1.d.jump(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserDoStatement1.d.jump(3,8): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserDoStatement1.d.jump (2 errors) ====
    do {
    ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }
    while (e);
           ~
!!! error TS2304: Cannot find name 'e'.